--- a/docs/source/latex_templates/refs.bib
+++ b/docs/source/latex_templates/refs.bib
@@ -60,16 +60,6 @@
    year = {2019},
 }
 
-@techreport{Hasbrouck2019,
-   author = {Emerson Hasbrouck and Robert Weller and Fernando Santiago-Mandujano and Byron Blomquist and Kelsey Maloney and Jefrey Snyder and Abby Clabaugh and Samantha Adams and Kellen Rosburg and Andrew King and Svetlana Natarov and Noah Howins and Garrett Hebert and Roger Lukas},
-   doi = {10.1575/1912/25262},
-   month = {1},
-   pages = {112},
-   title = {WHOI Hawaii Ocean Timeseries Station (WHOTS) : WHOTS-14 2017 mooring turnaround cruise report},
-   year = {2019},
-   institution={Woods Hole Oceanographic Institution}
-}
-
 @article{Hosom1995,
    abstract = {The recently developed IMET (improved meteorology) system for ships and buoys and the key elements of the program that led to its development are described. The system improves the ability to measure mean meteorological variables, including wind velocity, barometric pressure, incoming shortwave and longwave radiation, air temperature, sea surface temperature, humidity, and precipitation, from both types of platforms. Extensive laboratory and field tests of a variety of sensors were conducted to investigate and document their stability, accuracy, and reliability. Modular electronics were developed so that each sensor in the system communicated digitally, returning calibrated values to a central data recorder. IMET systems have been deployed on buoys in the Atlantic and Pacific Oceans and on research vessels. The history of the program, reasons for the choice of the present sensor suite, the design of the sensor modules, a description of the data acquisition system, and examples of data collected with the system are described. A discussion of the areas in which further improvements to the system will be sought is also provided.},
    author = {David S. Hosom and Robert A. Weller and Richard E. Payne and Kenneth E. Prada},
@@ -160,28 +150,20 @@
    year = {2007},
 }
 
-@techreport{Santiago-Mandujano2019,
-   author = {Fernando Santiago-Mandujano and Jefrey Snyder and Svetlana Natarov and Kelsey Maloney and Noah Howins and Garrett Hebert and Roger Lukas},
-   institution = {School of Ocean and Earth Science and Technology; University of Hawaii},
-   title = {UH Contributions to WHOTS-15 Cruise Report},
-   url = {http://www.soest.hawaii.edu/whots/proc_reports/WHOTS-15_CruiseRpt.pdf},
-   year = {2019},
-}
-
-@techreport{Santiago-Mandujano2021,
-   author = {Fernando Santiago-Mandujano and Dan Fitzgerald and Kelsey Maloney and Tully Rohrer and Noah Howins and Ryan Tabata and James Potemra},
-   institution = {School of Ocean and Earth Science and Technology, University of Hawaii},
-   title = {UH Contributions to WHOTS-16 Cruise Report},
-   url = {https://www.soest.hawaii.edu/whots/proc_reports/UH_Contributions_to_WHOTS16_Cruise_Report.pdf},
-   year = {2021},
-}
-
 @techreport{Santiago-Mandujano2022,
-   author = {Fernando Santiago-Mandujano and Dan Fitzgerald and Kelsey Maloney and Tully Rohrer and Noah Howins and Ryan Tabata and James Potemra},
+   author = {Fernando Santiago-Mandujano and Fernando Carvalho Pacheco and Dan Fitzgerald and Kelsey Maloney and Tully Rohrer and James Harris III and Noah Howins and James Potemra},
    institution = {School of Ocean and Earth Science and Technology, University of Hawaii},
-   title = {UH Contributions to WHOTS-17 Cruise Report},
-   url = {http://www.soest.hawaii.edu/whots/proc_reports/UH%20Contributions%20to%20WHOTS17_Cruise_Report.pdf},
+   title = {UH Contributions to WHOTS-18 Cruise Report},
+   url = {https://www.soest.hawaii.edu/whots/proc_reports/WHOTS18_Cruise_Report.pdf},
    year = {2022},
+}
+
+@techreport{Santiago-Mandujano2024,
+   author = {Fernando Santiago-Mandujano and Fernando Carvalho Pacheco and Dan Fitzgerald and Kelsey Maloney and Tully Rohrer and Adksion, Camile and James Potemra},
+   institution = {School of Ocean and Earth Science and Technology, University of Hawaii},
+   title = {UH Contributions to WHOTS-19 Cruise Report},
+   url = {https://www.soest.hawaii.edu/whots/proc_reports/WHOTS19_Cruise_Report.pdf},
+   year = {2024},
 }
 
 @techreport{Tupas1996,
@@ -248,14 +230,6 @@
    year = {2010},
 }
 
-@techreport{Santiago-Mandujano2019b,
-   author = {Fernando Santiago-Mandujano and Fernando Carvalho Pacheco and Kellen Rosburg and Andrew King and Ksenia Trifonova and Albert Plueddemann and Robert Weller and Roger Lukas and Jefrey Snyder and Nan Galbraith},
-   institution = {School of Ocean and Earth Science and Technology, University of Hawaii},
-   title = {Hydrographic Observations At the Woods Hole Oceanographic Institution Hawaii Ocean Time-series Site: 2017-2018 Data Report #14},
-   url = {http://www.soest.hawaii.edu/whots/WHOTS-14_datareport.pdf},
-   doi = {10.13140/RG.2.2.20697.47209},
-   year = {2019},
-}
 @techreport{Santiago-Mandujano2016,
    author = {Fernando Santiago-Mandujano and Daniel Mccoy and R Walter Deppe and Albert Plueddemann and Robert Weller and Roger Lukas and Jefrey Snyder and Sean Whelan and Nan Galbraith},
    issue = {9821},
