updated refs.bib with hot data report 34:2022

--- a/docs/source/latex_templates/refs.bib
+++ b/docs/source/latex_templates/refs.bib
@@ -32,8 +32,18 @@
    year = {1999},
 }
 
+@techreport{Fukieki2024,
+   author = {Lance Fukieki and Fernando Santiago-Mandujano and Fernando Carvalho Pacheco and James Potemra and Angelicque White},
+   city = {Honolulu, Hawaii 96822},
+   institution = {School of Ocean and Earth Science and Technology Publication #11724},
+   pages = {1-375},
+   title = {Hawaii Ocean Time-series Data Report 34: 2022},
+   url = {https://hahana.soest.hawaii.edu/hot/reports/rep_y34.pdf},
+   year = {2024},
+}
+
 @techreport{Fukieki2021,
-   author = {Lance Fukieki and Fernando Santiago-Mandujano and Fernando Carvalho Pacheco and Daniel Fitzgerald and Daniel Fitzgerald and Angelicque White},
+   author = {Lance Fukieki and Fernando Santiago-Mandujano and Fernando Carvalho Pacheco and Daniel Fitzgerald and James Potemra and Angelicque White},
    city = {Honolulu, Hawaii 96822},
    institution = {School of Ocean and Earth Science and Technology Publication #11424},
    pages = {1-426},
