Fixed Fukieki --> Fujieki

--- a/docs/source/latex_templates/refs.bib
+++ b/docs/source/latex_templates/refs.bib
@@ -32,8 +32,8 @@
    year = {1999},
 }
 
-@techreport{Fukieki2024,
-   author = {Lance Fukieki and Fernando Santiago-Mandujano and Fernando Carvalho Pacheco and James Potemra and Angelicque White},
+@techreport{Fujieki2024,
+   author = {Lance Fujieki and Fernando Santiago-Mandujano and Fernando Carvalho Pacheco and James Potemra and Angelicque White},
    city = {Honolulu, Hawaii 96822},
    institution = {School of Ocean and Earth Science and Technology Publication #11724},
    pages = {1-375},
@@ -42,8 +42,8 @@
    year = {2024},
 }
 
-@techreport{Fukieki2021,
-   author = {Lance Fukieki and Fernando Santiago-Mandujano and Fernando Carvalho Pacheco and Daniel Fitzgerald and James Potemra and Angelicque White},
+@techreport{Fujieki2021,
+   author = {Lance Fujieki and Fernando Santiago-Mandujano and Fernando Carvalho Pacheco and Daniel Fitzgerald and James Potemra and Angelicque White},
    city = {Honolulu, Hawaii 96822},
    institution = {School of Ocean and Earth Science and Technology Publication #11424},
    pages = {1-426},
@@ -52,8 +52,8 @@
    year = {2021},
 }
 
-@techreport{Fukieki2020,
-   author = {Lance Fukieki and Fernando Santiago-Mandujano and Fernando Carvalho Pacheco and Ksenia Trifonova and Daniel Fitzgerald and James Potemra and Angelicque White},
+@techreport{Fujieki2020,
+   author = {Lance Fujieki and Fernando Santiago-Mandujano and Fernando Carvalho Pacheco and Ksenia Trifonova and Daniel Fitzgerald and James Potemra and Angelicque White},
    institution = {SOEST Publication #10813},
    keywords = {SOEST Publication #10813},
    title = {Hawaii Ocean Time-series Data Report 30: 2018},
@@ -62,7 +62,7 @@
 }
 
 @techreport{Fujieki2019,
-   author = {Lance Fukieki and Fernando Santiago-Mandujano and Ksenia Trifonova and Roger Lukas and David Karl},
+   author = {Lance Fujieki and Fernando Santiago-Mandujano and Ksenia Trifonova and Roger Lukas and David Karl},
    institution = {School of Ocean and Earth Science and Technology, University of Hawaii, SOEST Publication #10803},
    pages = {436},
    title = {Hawaii Ocean Time-series Data Report 29: 2017},
