--- a/docs/source/latex_templates/maketitle.sty
+++ b/docs/source/latex_templates/maketitle.sty
@@ -105,7 +105,7 @@
     2022 - 2023,
     Data Report 18, School of Ocean and Earth Science and
     Technology (SOEST), Department of Oceanography, University of Hawai‘i at Mānoa, Honolulu, HI.
-    DOI: \href{https://doi.org/xx.xxxx/zenodo.xxxxxxx}{https://doi.org/xxx.xxxx/zenodo.xxxxx}
+    DOI: \href{https://doi.org/10.5281/zenodo.14285350}{https://doi.org/10.5281/zenodo.14285350}
     URL: \href{http://whots18-data-report.readthedocs.io/}{http://whots18-data-report.readthedocs.io/}.\par}
 
     % Bottom of the page
@@ -123,9 +123,8 @@
 \chapter*{Acknowledgments}
 {\large Many people participated in the WHOTS mooring deployment/recovery cruises. They are listed in Table 1 and
 and Table 4. We gratefully acknowledge their contributions and support. Thanks are due to all the personnel
-of the Upper Ocean Processes Group (UOP) at WHOI who prepared the WHOTS buoy’s instrumentation and mooring; to Kelsey
-Maloney, Tully Rohrer, Noah Howins, Ryan Tabata, and James Harris, for their technical assistance with the moored and
-shipboard instrumentation; We gratefully acknowledge the support from the colleagues at Sea-Bird to maintain the quality
+of the Upper Ocean Processes Group (UOP) at WHOI who prepared the WHOTS buoy’s instrumentation and mooring; 
+We gratefully acknowledge the support from the colleagues at Sea-Bird to maintain the quality
 of the CTD data. We would also like to thank the captains and crew of the Ship Oscar Sette, and the University of
 Hawaiʻi Marine Center staff for their efforts. This publication is based upon observations from the WHOI-Hawaii Ocean
 Time-series Site (WHOTS) mooring, which is supported in part by the National Oceanic and Atmospheric Administration (\href{https://www.noaa.gov/}{NOAA}) Global
@@ -134,8 +133,9 @@ Region (\href{https://website.whoi.edu/cinar/}{CINAR}) under Cooperative Agreeme
 Oceanographic Institution, and by National Science Foundation grants \href{https://www.nsf.gov/awardsearch/showAward?AWD_ID=0327513}{OCE-0327513},
 \href{https://www.nsf.gov/awardsearch/showAward?AWD_ID=0752606&HistoricalAwards=false}{OCE-0752606},
 \href{https://www.nsf.gov/awardsearch/showAward?AWD_ID=0926766&HistoricalAwards=false}{OCE-0926766},
-\href{https://www.nsf.gov/awardsearch/showAward?AWD_ID=1260164&HistoricalAwards=false}{OCE-1260164} and
-\href{https://www.nsf.gov/awardsearch/showAward?AWD_ID=1756517&HistoricalAwards=false}{OCE-1756517}
+\href{https://www.nsf.gov/awardsearch/showAward?AWD_ID=1260164&HistoricalAwards=false}{OCE-1260164},
+\href{https://www.nsf.gov/awardsearch/showAward?AWD_ID=1756517&HistoricalAwards=false}{OCE-1756517} and
+\href{https://www.nsf.gov/awardsearch/showAward?AWD_ID=2241005}{OCE-2241005}
 to the University of Hawaii for the Hawaii Ocean Time-series. This is SOEST contribution number xXxXxXxXxX \par}
 
 %======================================= END =========================================
