--- a/docs/source/latex_templates/maketitle.sty
+++ b/docs/source/latex_templates/maketitle.sty
@@ -121,7 +121,7 @@
 
 %==============================  ACKNOWLEDGMENTS   ===================================
 \chapter*{Acknowledgments}
-{\large Many people participated in the WHOTS mooring deployment/recovery cruises. They are listed in Table 1 and
+{\large Many people participated in the WHOTS mooring deployment/recovery cruises. They are listed in Table 1 
 and Table 4. We gratefully acknowledge their contributions and support. Thanks are due to all the personnel
 of the Upper Ocean Processes Group (UOP) at WHOI who prepared the WHOTS buoy’s instrumentation and mooring; 
 We gratefully acknowledge the support from the colleagues at Sea-Bird to maintain the quality
