--- a/docs/source/latex_templates/maketitle.sty
+++ b/docs/source/latex_templates/maketitle.sty
@@ -50,7 +50,7 @@
     1000 Pope Road, Honolulu, Hawaii 96822\par}
     \vspace{0.50cm}
 
-    {\large\ SOEST Publication no. xXxXxXx \par}
+    {\large\ SOEST Publication no. 11882 \par}
 
     \vspace{0.25cm}
 
@@ -136,7 +136,7 @@ Oceanographic Institution, and by National Science Foundation grants \href{https
 \href{https://www.nsf.gov/awardsearch/showAward?AWD_ID=1260164&HistoricalAwards=false}{OCE-1260164},
 \href{https://www.nsf.gov/awardsearch/showAward?AWD_ID=1756517&HistoricalAwards=false}{OCE-1756517} and
 \href{https://www.nsf.gov/awardsearch/showAward?AWD_ID=2241005}{OCE-2241005}
-to the University of Hawaii for the Hawaii Ocean Time-series. This is SOEST contribution number xXxXxXxXxX \par}
+to the University of Hawaii for the Hawaii Ocean Time-series. This is SOEST contribution number 11882. \par}
 
 %======================================= END =========================================
 
