--- a/docs/source/latex_templates/maketitle.sty
+++ b/docs/source/latex_templates/maketitle.sty
@@ -100,7 +100,7 @@
     \centering
     {\large Reproduction in whole or in part is permitted for any purpose of the United States Government.
     This report should be cited as Carvalho Pacheco, F., Santiago-Mandujano, F.,  Potemra, J. T., Plueddemann, A. J.,
-    Weller, R. A., Fitzgerald, D., \& Galbraith, N. R. (1-06). Hydrographic Observations at the Woods Hole
+    Weller, R. A., Fitzgerald, D., \& Galbraith, N. R. (2024). Hydrographic Observations at the Woods Hole
     Oceanographic Institution Hawaii Ocean Time-Series Site:
     2022 - 2023,
     Data Report 18, School of Ocean and Earth Science and
